--- a/templates/home/reassurance.html.twig
+++ b/templates/home/reassurance.html.twig
@@ -3,7 +3,7 @@
 <section class="mt-5" style="background-color: #f5f5f5;">
   <div class="container text-dark pt-3">
     <header class="pt-4 pb-3">
-      <h3>Why choose us</h3>
+      <h3>Pourquoi nous choisir</h3>
     </header>
 
     <div class="row mb-4">
@@ -13,8 +13,8 @@
             <i class="fas fa-camera-retro fa-2x fa-fw text-primary floating"></i>
           </span>
           <figcaption class="info">
-            <h6 class="title">Reasonable prices</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmor</p>
+            <h6 class="title">Des prix raisonables</h6>
+            <p>Des prix raisonables pour que nos cookies restent abordables pour tous les gourmands.</p>
           </figcaption>
         </figure>
         <!-- itemside // -->
@@ -26,8 +26,8 @@
             <i class="fas fa-star fa-2x fa-fw text-primary floating"></i>
           </span>
           <figcaption class="info">
-            <h6 class="title">Best quality</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmor</p>
+            <h6 class="title">Des produits de qualité</h6>
+            <p>Nous choisissons nos produits avec lesplus grand soin, pour vous fournir les meilleurs cookies.</p>
           </figcaption>
         </figure>
         <!-- itemside // -->
@@ -39,8 +39,8 @@
             <i class="fas fa-plane fa-2x fa-fw text-primary floating"></i>
           </span>
           <figcaption class="info">
-            <h6 class="title">Worldwide shipping</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmor</p>
+            <h6 class="title">Livraison dans toute la France</h6>
+            <p>Livraison en 24h/ 48h  (Chronopost) dans toute la France métropolitaine et principauté de Monaco.</p>
           </figcaption>
         </figure>
         <!-- itemside // -->
@@ -52,8 +52,8 @@
             <i class="fas fa-users fa-2x fa-fw text-primary floating"></i>
           </span>
           <figcaption class="info">
-            <h6 class="title">Customer satisfaction</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmor</p>
+            <h6 class="title">La satisfaction client</h6>
+            <p>Nous plaçons votre satisfaction au coeur de nos préoccupations.</p>
           </figcaption>
         </figure>
         <!-- itemside // -->
@@ -65,8 +65,8 @@
             <i class="fas fa-thumbs-up fa-2x fa-fw text-primary floating"></i>
           </span>
           <figcaption class="info">
-            <h6 class="title">Happy customers</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmor</p>
+            <h6 class="title">Des clients heureux</h6>
+            <p>Parce que la vie est plus belle avec des cookies faits avec amour.</p>
           </figcaption>
         </figure>
         <!-- itemside // -->
@@ -78,8 +78,8 @@
             <i class="fas fa-box fa-2x fa-fw text-primary floating"></i>
           </span>
           <figcaption class="info">
-            <h6 class="title">Thousand items</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmor</p>
+            <h6 class="title">Notre carte</h6>
+            <p>Une carte régulierement renouvelée pour vous proposer de nouveaux cookies.</p>
           </figcaption>
         </figure>
         <!-- itemside // -->
