--- a/templates/panier/panierBlocLivraison.html.twig
+++ b/templates/panier/panierBlocLivraison.html.twig
@@ -1,22 +1,17 @@
 
 
-
-
-
-
-
 {# {{dump(adressesLivraison)}} #}
 
 
 
-<div class="border-top pt-4 mx-4 mb-4">
-  <p><i class="fas fa-truck text-muted fa-lg"></i> Sélectionnez une adresse de livraison</p>
-  <p><b>Livraison en 48H</b> :Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-    aliquip
-  </p>
- </div>
-
 <div class="row">
+
+  {# <h4 class="card-title mb-4">Vos adresses</h4>    #}
+
+  <p>
+    <i class="fas fa-truck text-muted fa-lg"></i> 
+      Sélectionnez une adresse de livraison
+  </p>
 
   {% if adressesLivraison == null %}
   <div class=" pt-4 mx-4 mb-4">
@@ -53,13 +48,20 @@
 
 {# {{dump(adressesFacturation)}} #}
 
-<div class="border-top pt-4 mx-4 mb-4">
+
+
+
+
+
+
+
+
+<div class="row  mt-4">
+
   <p>
     <i class="fab fa-lg fa-cc-paypal "></i>
-    Sélectionnez une adresse de facturation</p>
- </div>
-
-<div class="row">
+    Sélectionnez une adresse de facturation
+  </p>
 
   {% if adressesFacturation == null %}
   <div class=" pt-4 mx-4 mb-4">
