article suppression dans panier

--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Votre panier{% endblock %}
+{% block title %}MON PANIER{% endblock %}
 
 {% block body %}
 
@@ -18,7 +18,7 @@
       <div class="col-lg-9">
         <div class="card border shadow-0">
           <div class="m-4">
-            <h4 class="card-title mb-4">Votre panier</h4>              
+            <h4 class="card-title mb-4">Mon panier</h4>              
 
               {% for data in dataPanier %}
                
