--- a/templates/panier/panierLigneArticle.html.twig
+++ b/templates/panier/panierLigneArticle.html.twig
@@ -93,7 +93,7 @@
   <div class="col-lg col-sm-4 d-flex justify-content-sm-center justify-content-md-start justify-content-lg-center justify-content-xl-end mb-2">
     <div class="float-md-end">
       {# <a href="#!" class="btn btn-light border px-2 icon-hover-primary"><i class="fas fa-heart fa-lg px-1 text-secondary"></i></a> #}
-      <a href="#" class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
+      <a href="{{path ('app_deleteFromPanier', {idArticle :  data.article.id } ) }}" class="btn btn-light border text-danger icon-hover-danger"> Supprimer</a>
     </div>
   </div>
 
