--- a/templates/panier/panierBlocLivraison.html.twig
+++ b/templates/panier/panierBlocLivraison.html.twig
@@ -27,7 +27,7 @@
       <div class="card w-100 my-2 shadow-2-strong">      
         
         <div class="card-body d-flex flex-column">
-          <h5 class="card-title">{{adresseLivraison.nomAdresse}} {{adresseLivraison.prenomAdresse}}</a></h5>
+          <h5 class="card-title">{{adresseLivraison.nomAdresse}} {{adresseLivraison.prenomAdresse}}</h5>
           <p class="card-text">{{adresseLivraison.rueAdresse}}</p>
           <p class="card-text">{{adresseLivraison.cpAdresse}}</p>
           <p class="card-text">{{adresseLivraison.villeAdresse}}</p>
@@ -77,7 +77,7 @@
       <div class="card w-100 my-2 shadow-2-strong">      
         
         <div class="card-body d-flex flex-column">
-          <h5 class="card-title">{{adresseFacturation.nomAdresse}} {{adresseFacturation.prenomAdresse}}</a></h5>
+          <h5 class="card-title">{{adresseFacturation.nomAdresse}} {{adresseFacturation.prenomAdresse}}</h5>
           <p class="card-text">{{adresseFacturation.rueAdresse}}</p>
           <p class="card-text">{{adresseFacturation.cpAdresse}}</p>
           <p class="card-text">{{adresseFacturation.villeAdresse}}</p>
