--- a/templates/panier/panierBlocTotal.html.twig
+++ b/templates/panier/panierBlocTotal.html.twig
@@ -15,7 +15,10 @@
     </div>
     <hr /> #}
     <div class="d-flex justify-content-between">
-      <p class="mb-2">Total :</p>
+      <p class="mb-2">
+        <b>Total</b> :<br />
+      (Frais de livraison inclus)
+        </p>
       <p class="mb-2 fw-bold">{{totalPanier}} €</p>
     </div>
     <input type="hidden" name="totalPanier" value="{{totalPanier}}" />
