--- a/templates/paiement/index.html.twig
+++ b/templates/paiement/index.html.twig
@@ -148,18 +148,21 @@
                headers: new Headers({
                     'Content-Type': 'application/x-www-form-urlencoded'
                })
-               }).then(function (response) {
+               }) /* */
+			.then(function (response) {
                     console.log("truc"+response.status)
-                    
+                 
                if (response.status == 200) {
                     window.location.href = "{{ path('app_paiement_merci') }}";
                } else {
                     //alert('Une erreur est survenue');
                     window.location.href = "{{ path('app_paiement_probleme') }}";
                }
+			
                }).catch(function(erreur){
                     console.log(erreur)
                });
+			/* */
                
           });
      }
