process paiment facture + commande ok

--- a/templates/home/reassurance.html.twig
+++ b/templates/home/reassurance.html.twig
@@ -27,7 +27,7 @@
           </span>
           <figcaption class="info">
             <h6 class="title">Des produits de qualité</h6>
-            <p>Nous choisissons nos produits avec lesplus grand soin, pour vous fournir les meilleurs cookies.</p>
+            <p>Nous choisissons nos produits avec le plus grand soin, pour vous fournir les meilleurs cookies.</p>
           </figcaption>
         </figure>
         <!-- itemside // -->
