--- a/templates/paiement/merci.html.twig
+++ b/templates/paiement/merci.html.twig
@@ -6,7 +6,41 @@
 
 {% block body %}
 
-MERCI
+<section class="bg-light ">
+	<div class="container">
+		<div class="row">
+
+			<div class="col-lg-9 mt-4">
+			
+
+				<div class="card border shadow-0">
+					<div class="m-4">
+						{# {{dump(addLivrSess)}} #}
+						<div class="card-body d-flex flex-column">
+							<h5 class="card-title"><i class="fa-solid fa-cookie-bite"></i>  MERCI</h5>
+							<p class="card-text">Un grand merci pour votre confiance.</p>
+							<p class="card-text">Nos petits lutins s'occupent de votre commande</p>
+					
+						</div>
+					</div>
+				</div>
+			</div>
+
+               <div class="col-lg-3 mt-4">
+			
+
+				<div class="card border shadow-0">
+					<div class="m-4">
+						{# {{dump(addLivrSess)}} #}
+						<div class="card-body d-flex flex-column">
+							 <img src="{{ asset('images/cookies/imageDefault.jpg') }}" class="card-img-top" style="aspect-ratio: 1 / 1" />
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+
 
 {% endblock %}
 
