--- a/templates/monCompte/index.html.twig
+++ b/templates/monCompte/index.html.twig
@@ -8,22 +8,58 @@
 {# {{dump(dataPanier)}} #}
 
 
-<section class="bg-light my-5">
+<section class="bg-light">
   <div class="container">
     <div class="row">
 
-      <div class="mb-3">
-          {{ app.user.userIdentifier }}
-          {# , <a href="{{ path('app_logout') }}">Logout</a> #}
-      </div>
+      
 
-      <div><a href="{{ path('app_adresse_index') }}">Mes adresses</a></div>
+      <table class="table">
+        <thead>
+            <tr>
+                {# <th>Id</th> #}
+                <th><a href="{{ path('app_adresse_index') }}">Mes adresses</a></th>
+                <th><a href="{{ path('app_adresse_new') }}">Ajouter une adresses</a></th>
+                <th><a href="{{ path('app_commande_index') }}">Mes Commandes</a></th>
+                <th><a href="{{ path('app_facture_index') }}">Mes Factures</a></th>
+            </tr>
+        </thead>
+      </table>
+
+      <div class="mb-3">
+        <i class="fa-regular fa-envelope" style="color: var(--mdb-link-color);"></i><span style="color: var(--mdb-link-color);"><b> {{ app.user.userIdentifier }}</b></span>
+        <a href="{{ path('app_logout') }}">Déconnexion</a> <br />
+{# {{dump(app.user)}} #}
+        Nom : {{ app.user.nomUser }} Prénom : {{ app.user.prenomUser }}<br />
+        Inscrit depuis le {{ app.user.dateIscriptionUser|date('Y-m-d') }}
+      </div>
+      <a href="#" onclick="sendMessageTest()" class="nav-link">test</a>
+
+
+      {# <div><a href="{{ path('app_adresse_index') }}">Mes adresses</a></div>
       <div><a href="{{ path('app_adresse_new') }}">Ajouter une adresses</a></div>
       <div><a href="{{ path('app_commande_index') }}">Mes Commandes</a></div>
-      <div><a href="{{ path('app_facture_index') }}">Mes Factures</a></div>
+      <div><a href="{{ path('app_facture_index') }}">Mes Factures</a></div> #}
        
 
+      {% block js %}
+        <script>
+        function sendMessageTest(){ 
 
+            
+            fetch( "{{ path('app_aecookie_sendMessageTest') }}")
+            .then(function (response) {
+                if (response.status == 200) {
+                    console.log('cool sendtest');
+                } else {
+                    console.log(response.status);
+                }
+            })
+            //.catch(error => alert("Erreur : " + error));
+            
+        } 
+        </script>
+        {% endblock %}
 
 
 
