--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,6 +6,15 @@
 <section class="bg-light my-5">
   <div class="container">
     <div class="row">
+
+
+         {#  message flash compte confirmé #}
+        {% for message in app.flashes('compteAjout') %}
+        <div class="alert alert-success" role="alert">
+            {{ message | raw }}
+        </div>
+        {% endfor %}    
+
             
         <form method="post">
             {% if error %}
