--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,7 +8,7 @@
     <div class="row">
 
 
-         {#  message flash compte confirmé #}
+        {#  message flash compte confirmé #}
         {% for message in app.flashes('compteAjout') %}
         <div class="alert alert-success" role="alert">
             {{ message | raw }}
@@ -48,10 +48,12 @@
                 </div>
             #}
 
-            <button class="btn btn-lg btn-primary" type="submit">
+            <button class="btn btn-lg btn-primary mt-3" type="submit">
                 Sign in
             </button>
         </form>
+
+        <div class=" mt-3"><a href="{{path("app_ae_motdepasseoublie")}}">mot de passe oublié</a></div>
 
     </div>
   </div>
