--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -27,13 +27,14 @@
               </a>
             {% else %} 
               <a href="{{ path('app_login') }}" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" title="Connexion"> 
-                <i class="fa-solid fa-right-to-bracket m-1 me-md-2"></i>
-                <p class="d-none d-md-block mb-0">Me connecter</p> 
+                {# <i class="fa-solid fa-right-to-bracket m-1 me-md-2"></i> #}
+                <i class="fas fa-user-alt m-1 me-md-2"></i>
+                <p class="d-none d-md-block mb-0">Mon compte</p> 
               </a>
-              <a href="{{ path('app_register') }}" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" title="Inscription"> 
+              {# <a href="{{ path('app_register') }}" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" title="Inscription"> 
                 <i class="fa-regular fa-address-card m-1 me-md-2"></i>
                 <p class="d-none d-md-block mb-0">M'inscrire</p> 
-              </a>
+              </a> #}
             {% endif  %} 
 
             {# <a href="https://github.com/mdbootstrap/bootstrap-material-design" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center" target="_blank"> <i class="fas fa-heart m-1 me-md-2"></i><p class="d-none d-md-block mb-0">Wishlist</p> </a> #}
