--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}MON COMPTE{% endblock %}
 
 {% block body %}
-<section class="bg-light my-5">
+<section class="bg-light ">
   <div class="container">
     <div class="row">
 
-
+<div class="col-lg-5 mt-3">
         {#  message flash compte confirmé #}
         {% for message in app.flashes('compteAjout') %}
         <div class="alert alert-success" role="alert">
@@ -27,7 +27,7 @@
                 </div>
             {% endif %}
 
-            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
             <label for="inputEmail">Email</label>
             <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
             <label for="inputPassword">Password</label>
@@ -49,11 +49,27 @@
             #}
 
             <button class="btn btn-lg btn-primary mt-3" type="submit">
-                Sign in
-            </button>
+                Je me connecte
+            </button> &nbsp; <a href="{{path("app_ae_motdepasseoublie")}}">mot de passe oublié</a>
         </form>
 
-        <div class=" mt-3"><a href="{{path("app_ae_motdepasseoublie")}}">mot de passe oublié</a></div>
+        
+
+</div>
+<div class="col-lg-2" >&nbsp;</div>
+<div class="col-lg-5  mt-3">
+<h1 class="h3 mb-3 font-weight-normal">Inscription</h1>
+        <p class="mt-1">
+            Pas encore de compte A&E Cookie Corner ?<br />
+            nous avons à cœur de satisfaire les gourmands<br />
+            N'attendez plus et rejoignez la tribu des Cookie Monsters...
+        </p>
+        <a href="{{ path('app_register') }}" class="btn btn-lg btn-primary mt-3" title="Inscription"> 
+            {# <i class="fa-regular fa-address-card m-1 me-md-2"></i> #}
+            Je m'inscris
+        </a>
+
+</div>
 
     </div>
   </div>
