--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -88,7 +88,7 @@
           </div>
 
           <p>
-           {{ article.descriptionArticle }}
+           {{ article.descriptionArticle | raw }}
           </p>
 
           
