--- a/templates/paiement/probleme.html.twig
+++ b/templates/paiement/probleme.html.twig
@@ -1,9 +1,36 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}PROBLEME{% endblock %}
 
 {% block body %}
 
-probleme
+<div class="col-lg-9 mt-4">
+			
+
+     <div class="card border shadow-0">
+          <div class="m-4">
+               {# {{dump(addLivrSess)}} #}
+               <div class="card-body d-flex flex-column">
+                    <h5 class="card-title"><i class="fa-solid fa-cookie-bite"></i> Nous avons rencontré un problème</h5>
+                    <p class="card-text">UNous sommes désolé, votre commande n'a pu être validée</p>
+                    
+          
+               </div>
+          </div>
+     </div>
+     </div>
+
+     <div class="col-lg-3 mt-4">
+
+
+     <div class="card border shadow-0">
+          <div class="m-4">
+               {# {{dump(addLivrSess)}} #}
+               <div class="card-body d-flex flex-column">
+                         <img src="{{ asset('images/cookies/imageDefault.jpg') }}" class="card-img-top" style="aspect-ratio: 1 / 1" />
+               </div>
+          </div>
+     </div>
+</div>
 
 {% endblock %}
