--- a/templates/monCompte/index.html.twig
+++ b/templates/monCompte/index.html.twig
@@ -19,7 +19,7 @@
             <tr>
                 {# <th>Id</th> #}
                 <th><a href="{{ path('app_adresse_index') }}">Mes adresses</a></th>
-                <th><a href="{{ path('app_adresse_new') }}">Ajouter une adresses</a></th>
+                <th><a href="{{ path('app_adresse_new') }}">Ajouter une adresse</a></th>
                 <th><a href="{{ path('app_commande_index') }}">Mes Commandes</a></th>
                 <th><a href="{{ path('app_facture_index') }}">Mes Factures</a></th>
             </tr>
