--- a/templates/adresse/edit.html.twig
+++ b/templates/adresse/edit.html.twig
@@ -6,7 +6,7 @@
 <section class="bg-light my-5">
   <div class="container">
     <div class="row">
-    <h1>Edit Adresse</h1>
+    <h1>Editer une adresse</h1>
 
     {{ include('adresse/_form.html.twig', {'button_label': 'Update'}) }}
 
