maj admin commande

--- a/templates/facture/show.html.twig
+++ b/templates/facture/show.html.twig
@@ -20,6 +20,11 @@
         </thead>
     </table>
 
+    <div class="mb-3">
+        <i class="fa-regular fa-envelope" style="color: var(--mdb-link-color);"></i><span style="color: var(--mdb-link-color);"><b> {{ app.user.userIdentifier }}</b></span>
+        <a href="{{ path('app_logout') }}">Déconnexion</a> 
+    </div>
+
 
 
 
