--- a/templates/adresse/edit.html.twig
+++ b/templates/adresse/edit.html.twig
@@ -3,9 +3,22 @@
 {% block title %}Edit Adresse{% endblock %}
 
 {% block body %}
-<section class="bg-light my-5">
+<section class="bg-light">
   <div class="container">
     <div class="row">
+
+    <table class="table">
+        <thead>
+            <tr>
+                {# <th>Id</th> #}
+                <th><a href="{{ path('app_adresse_index') }}">Mes adresses</a></th>
+                <th><a href="{{ path('app_adresse_new') }}">Ajouter une adresse</a></th>
+                <th><a href="{{ path('app_commande_index') }}">Mes Commandes</a></th>
+                <th><a href="{{ path('app_facture_index') }}">Mes Factures</a></th>
+            </tr>
+        </thead>
+      </table>
+
     <h1>Editer une adresse</h1>
 
     {{ include('adresse/_form.html.twig', {'button_label': 'Update'}) }}
