--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -97,21 +97,49 @@
            
             <!-- col.// -->
             <div class="col-md-4 col-6 mb-3">
-              <label class="mb-2 d-block">Quantity</label>
-              <div class="input-group mb-3" style="width: 170px;">
-                <button class="btn btn-white border border-secondary px-3" type="button" id="button-addon1" data-mdb-ripple-color="dark">
-                  <i class="fas fa-minus"></i>
-                </button>
-                <input type="text" class="form-control text-center border border-secondary" placeholder="1" aria-label="Example text with button addon" aria-describedby="button-addon1" />
-                <button class="btn btn-white border border-secondary px-3" type="button" id="button-addon2" data-mdb-ripple-color="dark">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
+              <label class="mb-2 d-block">Quantité</label>
+              <div class="input-group mb-3" style="width: 130px;">
+              
+              <button 
+                class="btn btn-white border border-secondary px-3" 
+                type="button" id="button-addon1" 
+                data-mdb-ripple-color="dark" 
+                onclick="modifQtity('moins', 1, {{article.id}});"
+                >
+                <i class="fas fa-minus"></i>
+              </button>
+
+              <input 
+                type="text" 
+                class="form-control text-center border border-secondary" 
+                placeholder="1" 
+                aria-label="Example text with button addon" 
+                aria-describedby="button-addon1" 
+                value="1" 
+                id="articleQtity{{article.id}}" 
+                name="articleQtity{{article.id}}"
+                readonly 
+              />
+
+              <button 
+                class="btn btn-white border border-secondary px-3" 
+                type="button" 
+                id="button-addon2" 
+                data-mdb-ripple-color="dark" 
+                onclick="modifQtity('plus', 1, {{article.id}});"
+              >
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
             </div>
           </div>
-         
-          <a href="{{ path('app_addPanier', {id :article.id , qtity:1 }) }}" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Ajouter au panier</a>
-          {# <a href="" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Ajouter au panier</a> #}
+
+          <div style="position:relative;">
+          <div id="ajaxPanierMaj{{article.id}}" style="position:absolute; top:-25px;"></div>
+            <button onclick="modifPanier( {{article.id}} )" class="btn btn-primary shadow-0 me-1">Ajouter au panier</button>
+            {# <a href="{{ path('app_addPanier', {id :article.id , qtity:1 }) }}" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Ajouter au panier</a> #}
+            {# <a href="" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Ajouter au panier</a> #}
+          </div>
          
         </div>
       </main>
